// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main snapshot renders with teacher instructions, prompt and rationale even if not set 1`] = `
<div>
  <ConfigLayout
    settings={
      <Panel
        configuration={
          Object {
            "choicesPosition": Object {
              "label": "Choices Position",
              "settings": true,
            },
            "duplicates": Object {
              "label": "Duplicates",
              "settings": true,
            },
            "lockChoiceOrder": Object {
              "label": "Lock Choice Order",
              "settings": true,
            },
            "maxResponseAreas": 10,
            "partialScoring": Object {
              "label": "Allow Partial Scoring",
              "settings": false,
            },
            "prompt": Object {
              "label": "Prompt",
              "settings": true,
            },
            "rationale": Object {
              "label": "Rationale",
              "settings": true,
            },
            "spellCheck": Object {
              "enabled": true,
              "label": "Spellcheck",
              "settings": false,
            },
            "teacherInstructions": Object {
              "label": "Teacher Instructions",
              "settings": true,
            },
          }
        }
        groups={
          Object {
            "Properties": Object {
              "promptEnabled": undefined,
              "rationaleEnabled": undefined,
              "spellCheckEnabled": false,
              "teacherInstructionsEnabled": undefined,
            },
            "Settings": Object {
              "choicesPosition": undefined,
              "duplicates": undefined,
              "lockChoiceOrder": undefined,
              "partialScoring": false,
            },
          }
        }
        model={
          Object {
            "alternateResponses": Array [
              Array [
                "1",
              ],
              Array [
                "0",
              ],
            ],
            "choices": Array [
              Object {
                "id": "0",
                "value": "<div>6</div>",
              },
              Object {
                "id": "1",
                "value": "<div>9</div>",
              },
            ],
            "choicesPosition": "below",
            "correctResponse": Object {
              "0": "0",
              "1": "1",
            },
            "disabled": false,
            "duplicates": true,
            "markup": "{{0}} + {{1}} = 15",
            "mode": "gather",
            "prompt": "<p>Solve the equation below.</p>",
            "promptEnabled": true,
            "rationale": "<p>A correct response is shown below:</p><ul><li>2/6 = 1/3</li><li>4/8 = 1/2</li><li>6/10 = 3/5</li><li>9/12 = 3/4</li></ul>",
            "rationaleEnabled": true,
            "slateMarkup": "<span data-type=\\"drag_in_the_blank\\" data-index=\\"0\\" data-id=\\"0\\" data-value=\\"&lt;div&gt;6&lt;/div&gt;\\"></span> + <span data-type=\\"drag_in_the_blank\\" data-index=\\"1\\" data-id=\\"1\\" data-value=\\"&lt;div&gt;9&lt;/div&gt;\\"></span> = 15",
            "studentInstructionsEnabled": true,
            "teacherInstructionsEnabled": true,
            "toolbarEditorPosition": "bottom",
          }
        }
        onChangeConfiguration={[Function]}
        onChangeModel={[Function]}
      />
    }
  >
    <div>
      <InputContainer
        label="Teacher Instructions"
      >
        <EditableHtml
          markup=""
          nonEmpty={false}
          onChange={[Function]}
          toolbarOpts={
            Object {
              "position": "bottom",
            }
          }
        />
      </InputContainer>
      <InputContainer
        label="Prompt"
      >
        <EditableHtml
          disableUnderline={true}
          markup="<p>Solve the equation below.</p>"
          nonEmpty={false}
          onChange={[Function]}
          toolbarOpts={
            Object {
              "position": "bottom",
            }
          }
        />
      </InputContainer>
      <div>
        <WithStyles(Typography)>
          Define Template, Choices, and Correct Responses
        </WithStyles(Typography)>
        <WithStyles(Tooltip)
          classes={
            Object {
              "tooltip": undefined,
            }
          }
          disableFocusListener={true}
          disableTouchListener={true}
          placement="right"
          title="Validation requirements:
The tokens should not be empty and should be unique.
There should be at least 1 and at most 10 response areas defined.
There should be at least 3 tokens defined."
        >
          <pure(InfoIcon)
            color="primary"
            fontSize="small"
            style={
              Object {
                "marginLeft": "5px",
              }
            }
          />
        </WithStyles(Tooltip)>
      </div>
      <EditableHtml
        disableUnderline={true}
        markup="<span data-type=\\"drag_in_the_blank\\" data-index=\\"0\\" data-id=\\"0\\" data-value=\\"&lt;div&gt;6&lt;/div&gt;\\"></span> + <span data-type=\\"drag_in_the_blank\\" data-index=\\"1\\" data-id=\\"1\\" data-value=\\"&lt;div&gt;9&lt;/div&gt;\\"></span> = 15"
        nonEmpty={false}
        onChange={[Function]}
        pluginProps={
          Object {
            "audio": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": true,
            },
          }
        }
        responseAreaProps={
          Object {
            "maxResponseAreas": 10,
            "options": Object {
              "duplicates": true,
            },
            "type": "drag-in-the-blank",
          }
        }
        toolbarOpts={
          Object {
            "position": "bottom",
          }
        }
      />
      <WithStyles(Choices)
        duplicates={true}
        model={
          Object {
            "alternateResponses": Array [
              Array [
                "1",
              ],
              Array [
                "0",
              ],
            ],
            "choices": Array [
              Object {
                "id": "0",
                "value": "<div>6</div>",
              },
              Object {
                "id": "1",
                "value": "<div>9</div>",
              },
            ],
            "choicesPosition": "below",
            "correctResponse": Object {
              "0": "0",
              "1": "1",
            },
            "disabled": false,
            "duplicates": true,
            "markup": "{{0}} + {{1}} = 15",
            "mode": "gather",
            "prompt": "<p>Solve the equation below.</p>",
            "promptEnabled": true,
            "rationale": "<p>A correct response is shown below:</p><ul><li>2/6 = 1/3</li><li>4/8 = 1/2</li><li>6/10 = 3/5</li><li>9/12 = 3/4</li></ul>",
            "rationaleEnabled": true,
            "slateMarkup": "<span data-type=\\"drag_in_the_blank\\" data-index=\\"0\\" data-id=\\"0\\" data-value=\\"&lt;div&gt;6&lt;/div&gt;\\"></span> + <span data-type=\\"drag_in_the_blank\\" data-index=\\"1\\" data-id=\\"1\\" data-value=\\"&lt;div&gt;9&lt;/div&gt;\\"></span> = 15",
            "studentInstructionsEnabled": true,
            "teacherInstructionsEnabled": true,
            "toolbarEditorPosition": "bottom",
          }
        }
        onChange={[Function]}
        toolbarOpts={
          Object {
            "position": "bottom",
          }
        }
      />
      <InputContainer
        label="Rationale"
      >
        <EditableHtml
          markup="<p>A correct response is shown below:</p><ul><li>2/6 = 1/3</li><li>4/8 = 1/2</li><li>6/10 = 3/5</li><li>9/12 = 3/4</li></ul>"
          onChange={[Function]}
          toolbarOpts={
            Object {
              "position": "bottom",
            }
          }
        />
      </InputContainer>
    </div>
  </ConfigLayout>
</div>
`;

exports[`Main snapshot renders without teacher instructions, prompt and rationale 1`] = `
<div>
  <ConfigLayout
    settings={
      <Panel
        configuration={
          Object {
            "choicesPosition": Object {
              "label": "Choices Position",
              "settings": true,
            },
            "duplicates": Object {
              "label": "Duplicates",
              "settings": true,
            },
            "lockChoiceOrder": Object {
              "label": "Lock Choice Order",
              "settings": true,
            },
            "maxResponseAreas": 10,
            "partialScoring": Object {
              "label": "Allow Partial Scoring",
              "settings": false,
            },
            "prompt": Object {
              "label": "Prompt",
              "settings": true,
            },
            "rationale": Object {
              "label": "Rationale",
              "settings": true,
            },
            "spellCheck": Object {
              "enabled": true,
              "label": "Spellcheck",
              "settings": false,
            },
            "teacherInstructions": Object {
              "label": "Teacher Instructions",
              "settings": true,
            },
          }
        }
        groups={
          Object {
            "Properties": Object {
              "promptEnabled": undefined,
              "rationaleEnabled": undefined,
              "spellCheckEnabled": false,
              "teacherInstructionsEnabled": undefined,
            },
            "Settings": Object {
              "choicesPosition": undefined,
              "duplicates": undefined,
              "lockChoiceOrder": undefined,
              "partialScoring": false,
            },
          }
        }
        model={
          Object {
            "alternateResponses": Array [
              Array [
                "1",
              ],
              Array [
                "0",
              ],
            ],
            "choices": Array [
              Object {
                "id": "0",
                "value": "<div>6</div>",
              },
              Object {
                "id": "1",
                "value": "<div>9</div>",
              },
            ],
            "choicesPosition": "below",
            "correctResponse": Object {
              "0": "0",
              "1": "1",
            },
            "disabled": false,
            "duplicates": true,
            "markup": "{{0}} + {{1}} = 15",
            "mode": "gather",
            "prompt": "<p>Solve the equation below.</p>",
            "promptEnabled": false,
            "rationale": "<p>A correct response is shown below:</p><ul><li>2/6 = 1/3</li><li>4/8 = 1/2</li><li>6/10 = 3/5</li><li>9/12 = 3/4</li></ul>",
            "rationaleEnabled": false,
            "slateMarkup": "<span data-type=\\"drag_in_the_blank\\" data-index=\\"0\\" data-id=\\"0\\" data-value=\\"&lt;div&gt;6&lt;/div&gt;\\"></span> + <span data-type=\\"drag_in_the_blank\\" data-index=\\"1\\" data-id=\\"1\\" data-value=\\"&lt;div&gt;9&lt;/div&gt;\\"></span> = 15",
            "studentInstructionsEnabled": true,
            "teacherInstructionsEnabled": false,
            "toolbarEditorPosition": "bottom",
          }
        }
        onChangeConfiguration={[Function]}
        onChangeModel={[Function]}
      />
    }
  >
    <div>
      <div>
        <WithStyles(Typography)>
          Define Template, Choices, and Correct Responses
        </WithStyles(Typography)>
        <WithStyles(Tooltip)
          classes={
            Object {
              "tooltip": undefined,
            }
          }
          disableFocusListener={true}
          disableTouchListener={true}
          placement="right"
          title="Validation requirements:
The tokens should not be empty and should be unique.
There should be at least 1 and at most 10 response areas defined.
There should be at least 3 tokens defined."
        >
          <pure(InfoIcon)
            color="primary"
            fontSize="small"
            style={
              Object {
                "marginLeft": "5px",
              }
            }
          />
        </WithStyles(Tooltip)>
      </div>
      <EditableHtml
        disableUnderline={true}
        markup="<span data-type=\\"drag_in_the_blank\\" data-index=\\"0\\" data-id=\\"0\\" data-value=\\"&lt;div&gt;6&lt;/div&gt;\\"></span> + <span data-type=\\"drag_in_the_blank\\" data-index=\\"1\\" data-id=\\"1\\" data-value=\\"&lt;div&gt;9&lt;/div&gt;\\"></span> = 15"
        nonEmpty={false}
        onChange={[Function]}
        pluginProps={
          Object {
            "audio": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": true,
            },
          }
        }
        responseAreaProps={
          Object {
            "maxResponseAreas": 10,
            "options": Object {
              "duplicates": true,
            },
            "type": "drag-in-the-blank",
          }
        }
        toolbarOpts={
          Object {
            "position": "bottom",
          }
        }
      />
      <WithStyles(Choices)
        duplicates={true}
        model={
          Object {
            "alternateResponses": Array [
              Array [
                "1",
              ],
              Array [
                "0",
              ],
            ],
            "choices": Array [
              Object {
                "id": "0",
                "value": "<div>6</div>",
              },
              Object {
                "id": "1",
                "value": "<div>9</div>",
              },
            ],
            "choicesPosition": "below",
            "correctResponse": Object {
              "0": "0",
              "1": "1",
            },
            "disabled": false,
            "duplicates": true,
            "markup": "{{0}} + {{1}} = 15",
            "mode": "gather",
            "prompt": "<p>Solve the equation below.</p>",
            "promptEnabled": false,
            "rationale": "<p>A correct response is shown below:</p><ul><li>2/6 = 1/3</li><li>4/8 = 1/2</li><li>6/10 = 3/5</li><li>9/12 = 3/4</li></ul>",
            "rationaleEnabled": false,
            "slateMarkup": "<span data-type=\\"drag_in_the_blank\\" data-index=\\"0\\" data-id=\\"0\\" data-value=\\"&lt;div&gt;6&lt;/div&gt;\\"></span> + <span data-type=\\"drag_in_the_blank\\" data-index=\\"1\\" data-id=\\"1\\" data-value=\\"&lt;div&gt;9&lt;/div&gt;\\"></span> = 15",
            "studentInstructionsEnabled": true,
            "teacherInstructionsEnabled": false,
            "toolbarEditorPosition": "bottom",
          }
        }
        onChange={[Function]}
        toolbarOpts={
          Object {
            "position": "bottom",
          }
        }
      />
    </div>
  </ConfigLayout>
</div>
`;
